--- a/P005567.opf/meta.yml
+++ b/P005567.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P005567
+id: P005567
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG25359
   title: སྒྲ་རིག་པའི་བསླབ་གཞི། ༼དག་བཅོས་མ།༽
-  volume: ''
   author: ''
+  volumes: {}
