--- a/P005567.opf/meta.yml
+++ b/P005567.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG25359
   title: སྒྲ་རིག་པའི་བསླབ་གཞི། ༼དག་བཅོས་མ།༽
   author: ''
-  volumes: {}
+  volumes:
+    26575c8e732e4e05b9d7f712922a7720:
+      image_group_id: I1KG25361
+      title: ''
+      volume_number: 1
+      total_pages: 234
