--- a/P005567.opf/layers/v001/Pagination.yml
+++ b/P005567.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 41a737cf052a4a0d80d0a63e6e750678
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   456cd25067c04f3887cc2b32672b031a:
